--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'me.tatarka:gradle-retrolambda:3.7.1'
+        classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.3.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
