--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation 'com.apollographql.apollo:apollo-runtime:1.3.0'
     implementation "com.apollographql.apollo:apollo-android-support:1.3.0"
 
+    // Animated images support
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
