--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,14 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.lloydant.biotrac"
-        minSdkVersion 19
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk{
+            abiFilters "arm64-v8a","armeabi","armeabi-v7a"
+        }
     }
     buildTypes {
         release {
