--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
