Completed Lecturer & Student Biometrics Update
Completed Lecturer & Student Biometrics Update Activity.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
     // build.gradle or build.gradle.kts
     apollo {
         generateKotlinModels.set(false) // or false for Java models
+        customTypeMapping = [
+                "Upload" : "com.apollographql.apollo.api.FileUpload"
+        ]
     }
 }
 
