--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.lloydant.biotrac">
 
+    <uses-sdk tools:overrideLibrary="pl.droidsonroids.gif" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <!--
  If your app targets Android 9 or lower, you can declare
          ACCESS_COARSE_LOCATION instead.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-sdk tools:overrideLibrary="pl.droidsonroids.gif"/>
 
     <application
         android:allowBackup="true"
@@ -28,8 +27,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeviceListActivity"></activity>
-        <activity android:name=".AttendanceActivity" />
+        <activity android:name=".AttendanceActivity"></activity>
+        <activity android:name=".DeviceListActivity" />
         <activity android:name=".DepartmentalCourseListActivity" />
         <activity android:name=".LecturerBioUpdateActivity" />
         <activity android:name=".UpdateFingerprintActivity" />
