--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AttendanceActivity"></activity>
+        <activity android:name=".SDKTestActivity"></activity>
+        <activity android:name=".AttendanceActivity" />
         <activity android:name=".DeviceListActivity" />
         <activity android:name=".DepartmentalCourseListActivity" />
         <activity android:name=".LecturerBioUpdateActivity" />
