--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,13 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    // Add Dagger dependencies
+    implementation 'com.google.dagger:dagger:2.26'
+    implementation 'com.google.dagger:dagger-android-support:2.26'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.26'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
